# curl-http-client

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: asynchronous.rs  cancel.rs  download.rs  get.rs  post.rs  resume_download.rs  upload.rs
src/: collector.rs  error.rs  http_client.rs  lib.rs  request.rs  response.rs  test.rs
src/test/: asynchronous.rs  cancel.rs  download.rs  get.rs  headers.rs  post.rs  streaming.rs  test_setup.rs  upload.rs
