[package]
name = "curl-http-client"
version = "0.3.5"
edition = "2021"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
license = "MIT"
description = "This is a wrapper for Easy2 from curl-rust crate for ergonomic use and is able to perform asynchronously using async-curl crate that uses an actor model (Message passing) to achieve a non-blocking I/O."
repository = "https://github.com/LorenzoLeonardo/curl-http-client"
homepage = "https://github.com/LorenzoLeonardo/curl-http-client"
documentation = "https://docs.rs/curl-http-client"
readme = "README.md"

[dependencies]
async-curl = "0.2"
curl = "0.4"
derive-deref-rs = "0.1"
http = "0.2"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.28.0", features = ["rt"] }
url = "2.4"

[dev-dependencies]
futures = "0.3"
tempfile = "3.9"
test-case = "3.2"
wiremock = "=0.5.15"
